--- a/Graded-Exercise-API.v1.yaml
+++ b/Graded-Exercise-API.v1.yaml
@@ -388,90 +388,6 @@ paths:
         name: posting_id
         in: path
         required: true
-    get:
-      summary: Your GET endpoint
-      tags: []
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                description: ''
-                type: object
-                properties:
-                  posting_title:
-                    type: string
-                    minLength: 1
-                    description: Title of the posting
-                  posting_description:
-                    type: string
-                    minLength: 1
-                    description: Description of the posting
-                  posting_category:
-                    type: string
-                    minLength: 1
-                    description: Category of the posting
-                  posting_location:
-                    type: string
-                    minLength: 1
-                    description: Location of the item
-                  posting_price:
-                    type: number
-                    minimum: 0
-                    description: Asking price for the item
-                  posting_date:
-                    type: string
-                    minLength: 1
-                    format: date-time
-                    description: Post date of the posting
-                  posting_delivery_type:
-                    type: string
-                    minLength: 1
-                    enum:
-                      - Shipping
-                      - PickUp
-                    description: Delivery type for the item
-                  posting_images:
-                    type: array
-                    uniqueItems: true
-                    minItems: 0
-                    maxItems: 3
-                    description: Arrays of string which are the path of the images
-                    items:
-                      type: string
-                  seller_name:
-                    type: string
-                    minLength: 1
-                    description: Full name of the seller
-                  seller_email:
-                    type: string
-                    minLength: 1
-                    format: email
-                    description: Email address of the seller
-                  seller_id:
-                    type: string
-                    minLength: 1
-                    format: uuid
-                    description: ID of the seller
-                required:
-                  - posting_title
-                  - posting_description
-                  - posting_category
-                  - posting_location
-                  - posting_price
-                  - posting_date
-                  - posting_delivery_type
-                  - posting_images
-                  - seller_name
-                  - seller_email
-                  - seller_id
-              examples: {}
-          headers: {}
-        '404':
-          description: Not Found
-      operationId: get-users-user_id-postings-posting_id
-      description: Get all the information of a posting
     put:
       summary: ''
       operationId: put-users-user_id-postings-posting_id
@@ -757,7 +673,7 @@ paths:
                   - seller_id
       operationId: get-postings-posting_id
       description: Get the information of one posting
-  '/postings/catagory/{name}':
+  '/postings/category/{name}':
     parameters:
       - schema:
           type: string
@@ -1038,11 +954,16 @@ paths:
           description: Not Found
       operationId: get-postings-date
       description: 'Will give the posting by order of posting date '
-  '/users/{users_id}/postings/upload':
+  '/users/{users_id}/postings/{posting_id}/upload':
     parameters:
       - schema:
           type: string
         name: users_id
+        in: path
+        required: true
+      - schema:
+          type: string
+        name: posting_id
         in: path
         required: true
     post:
