--- a/Graded-Exercise-API.v1.yaml
+++ b/Graded-Exercise-API.v1.yaml
@@ -6,7 +6,7 @@ info:
     name: Noiraud Loreleï
   description: API which primary function is to serve as a platform for selling and buying used items. An example of this in Finland would be Tori.fi or globally ebay.com.
 servers:
-  - url: 'http://localhost:3000'
+  - url: 'https://graded-exercise.herokuapp.com/'
 paths:
   '/users/{userId}':
     parameters:
